--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
-              <h4>Master of Business Adminstration in Leadership &amp; Global Strategy</h4>
+              <h4>Master of Business Administration in Leadership &amp; Global Strategy</h4>
               <h5>2021 - 2022</h5>
               <p><em>Woodbury University, Burbank, CA</em></p>
             </div>
