--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1>Mheir Ohannessian</h1>
-      <p>I Know <span class="typed" data-typed-items="Networking, Security, Business, About Leadership, System Administration, Electrical, Smart Home Automation, Smart Lighting, Artificial Intelligence"></span></p>
+      <p>I Know <span class="typed" data-typed-items="Project Management, Team Leadership, Networking, Security, Business, About Leadership, System Administration, Electrical, Smart Home Automation, Smart Lighting, Artificial Intelligence"></span></p>
       <div class="social-links">
         <a href="https://www.facebook.com/mheirohannessian/" class="facebook"><i class="bx bxl-facebook"></i></a>
         <a href="https://www.instagram.com/mheirohannessian/?hl=en" class="instagram"><i class="bx bxl-instagram"></i></a>
@@ -142,10 +142,13 @@
           <div class="col-lg-6">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
-              <h4>Information Technology Technician III</h4>
+              <h4>Project Manager / Lead Technician</h4>
               <h5>2020 - Present</h5>
               <p><em>Malibu Wired, West Hollywood, CA </em></p>
               <ul>
+                <li>Plan and develop the project idea.</li>
+                <li>Monitor project progress and set deadlines.</li>
+                <li>Create and develop our dream team.</li>
                 <li>Designing, engineering, installing, programming and providing life-long service for the sophisticated technology solutions that meet our clients project requirements and goals.</li>
                 <li>Programming for industry-leading brands including Lutron and Control4.</li>
                 <li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the design</li>
