--- a/index.html
+++ b/index.html
@@ -138,6 +138,17 @@
               <h5>2010 - 2014</h5>
               <p><em>Glendale High School, Glendale, CA</em></p>
             </div>
+            <h3 class="resume-title">Organizations</h3>
+            <div class="resume-item">
+              <h4>President of the Armenian Church Youth Organization</h4>
+              <h5>2021-2022</h5>
+              <p><em>Burbank, CA</em></p>
+            </div>
+            <div class="resume-item">
+              <h4>Advisor of the Armenian Church Youth Organization Central Council</h4>
+              <h5>2021-2022</h5>
+              <p><em>Burbank, CA</em></p>
+            </div>
           </div>
           <div class="col-lg-6">
             <h3 class="resume-title">Professional Experience</h3>
