--- a/index.html
+++ b/index.html
@@ -140,14 +140,14 @@
             </div>
             <h3 class="resume-title">Organizations</h3>
             <div class="resume-item">
-              <h4>President of the Armenian Church Youth Organization</h4>
+              <h4>President of the Armenian Church Youth Organization at St. Leon</h4>
               <h5>2021-2022</h5>
-              <p><em>Burbank, CA</em></p>
+              <p><em>St. Leon Armenian Cathedral, Burbank, CA</em></p>
             </div>
             <div class="resume-item">
               <h4>Advisor of the Armenian Church Youth Organization Central Council</h4>
               <h5>2021-2022</h5>
-              <p><em>Burbank, CA</em></p>
+              <p><em>St. Leon Armenian Cathedral, Burbank, CA</em></p>
             </div>
           </div>
           <div class="col-lg-6">
