--- a/index.html
+++ b/index.html
@@ -153,6 +153,18 @@
           <div class="col-lg-6">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
+             <h4>Project Manager / Lead Technician</h4>
+              <h5>2020 - Present</h5>
+              <p><em>Malibu Wired, West Hollywood, CA </em></p>
+              <ul>
+                <li>Plan and develop the project idea.</li>
+                <li>Monitor project progress and set deadlines.</li>
+                <li>Create and develop our dream team.</li>
+                <li>Designing, engineering, installing, programming and providing life-long service for the sophisticated technology solutions that meet our clients project requirements and goals.</li>
+                <li>Programming for industry-leading brands including Lutron and Control4.</li>
+                <li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the design</li>
+                <li>Helping our valued clientele experience the ultimate luxury at home with unmatched efficiency at work through intuitive control of audio, video, lighting, networking and security. </li>
+            </div>
               <h4>Project Manager / Lead Technician</h4>
               <h5>2020 - Present</h5>
               <p><em>Malibu Wired, West Hollywood, CA </em></p>
