--- a/index.html
+++ b/index.html
@@ -153,26 +153,25 @@
           <div class="col-lg-6">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
-              <h4>Computer Sales Consultant</h4>
-              <h5>2015 - 2017</h5>
-              <p><em>Best Buy, Atwater Village, CA</em></p>
+              <h4>Chief Project Officer</h4>
+              <h5>2022 - Present</h5>
+              <p><em>Malibu Wired, West Hollywood, CA</em></p>
               <ul>
-                <li>Selling computers, programs, monitors, printers, and phones in the Computer Sales Department.</li>
-                <li>Helping customers with computer needs including fixing computers, installing programs, and showing customers how it all works.</li>
+                <li>Developed and executed a comprehensive technology strategy tailored to the smart home automation industry.</li>
+                <li>Drive the integration of AI, IoT, and other cutting-edge technologies into our product offerings.</li>
+                <li>Lead the development of innovative smart home products and solutions to stay ahead of market trends.</li>
+                <li>Implement technologies that enhance user experience and provide seamless automation.</li>
               </ul>
             </div>
             <div class="resume-item">
               <h4>Project Manager / Lead Technician</h4>
-              <h5>2020 - Present</h5>
+              <h5>2020 - 2022</h5>
               <p><em>Malibu Wired, West Hollywood, CA </em></p>
               <ul>
                 <li>Plan and develop the project idea.</li>
                 <li>Monitor project progress and set deadlines.</li>
                 <li>Create and develop our dream team.</li>
                 <li>Designing, engineering, installing, programming and providing life-long service for the sophisticated technology solutions that meet our clients project requirements and goals.</li>
-                <li>Programming for industry-leading brands including Lutron and Control4.</li>
-                <li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the design</li>
-                <li>Helping our valued clientele experience the ultimate luxury at home with unmatched efficiency at work through intuitive control of audio, video, lighting, networking and security. </li>
             </div>
             <div class="resume-item">
               <h4>Computer Sales Consultant</h4>
