--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1>Mheir Ohannessian</h1>
-      <p>I Know <span class="typed" data-typed-items="Project Management, Real Estate, Networking, Security, Business, System Administration, Electrical, Smart Home Automation, Smart Lighting, Team Leadership, Artificial Intelligence"></span></p>
+      <p>I Know <span class="typed" data-typed-items="Project Management, Networking, Security, Business, System Administration, Electrical, Smart Home Automation, Smart Lighting, Team Leadership, Artificial Intelligence"></span></p>
       <div class="social-links">
         <a href="https://www.facebook.com/mheirohannessian/" class="facebook"><i class="bx bxl-facebook"></i></a>
         <a href="https://www.instagram.com/mheirohannessian/?hl=en" class="instagram"><i class="bx bxl-instagram"></i></a>
